# autonomous-release-manager

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  TASK_PACKET_001.json  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
delivery/: ARM-CLI-001.delivery.json
src/arm/: __init__.py  cli.py  config.py
src/arm/adapters/: __init__.py  git.py
src/arm/domain/: __init__.py  models.py
src/arm/services/: __init__.py  changelog.py  conventional_commits.py  packager.py  rollback.py  semver.py  transaction_log.py
src/arm/workflow/: __init__.py  state_machine.py
tests/: test_changelog.py  test_conventional_commits.py  test_integration_dry_run.py  test_integration_policy_guards.py  test_integration_release_apply_rollback.py  test_packager.py  test_policy_config.py  test_semver.py  test_semver_policy_fuzz.py  test_state_machine.py
