[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-release-manager"
version = "0.0.0"
description = "Local-only CLI to plan/execute releases from a git repo (Conventional Commits + SemVer + changelog + zip + rollback)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
arm = "arm.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
